--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,9 @@
 platform = espressif32
 board = lolin32
 framework = arduino
-lib_deps = PubSubClient
+lib_deps = ESP_VS1053_Library,
+           MFRC522,
+           SdFat
 
 #board_build.f_cpu = 240000000L
 #board_build.f_flash = 40000000L
